Serialize || Parallelize Logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "system_error": "cpp"
+        "system_error": "cpp",
+        "vector": "cpp",
+        "type_traits": "cpp",
+        "chrono": "cpp"
     }
 }
